Adding The District Summary for Deliverable 2.

--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -228,7 +228,7 @@
        "39169           95.0        75.0  "
       ]
      },
-     "execution_count": 209,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,13 +239,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "scrolled": true
+   },
+   "source": [
+    "# The district summary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# New DataFrame:\n",
+    "\n",
+    "## Combine the data into a single dataset.\n",
+    "school_data_complete_df = pd.merge(student_data_df, school_data_df, on=[\"school_name\", \"school_name\"]) \n",
+    "\n",
+    "## Calculate: \n",
+    "\n",
+    "### Total number of students\n",
+    "student_count = school_data_complete_df[\"Student ID\"].count()\n",
+    "### Total number of schools\n",
+    "school_count = school_data_df[\"school_name\"].count() \n",
+    "### Total budget\n",
+    "total_budget = school_data_df[\"budget\"].sum()\n",
+    "### Average reading score\n",
+    "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
+    "### Average math score\n",
+    "average_math_score = school_data_complete_df[\"math_score\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New DataFrame:\n",
+    "\n",
+    "## Get all the students who are passing math in a new DataFrame.\n",
+    "passing_math = school_data_complete_df[school_data_complete_df[\"math_score\"] >= 70]\n",
+    "\n",
+    "## Calculate: \n",
+    "\n",
+    "### Number of students passing math\n",
+    "passing_math_count = passing_math[\"student_name\"].count()\n",
+    "### Percent that passed math\n",
+    "passing_math_percentage = passing_math_count / float(student_count) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New DataFrame:\n",
+    "\n",
+    "## Get all the students that are passing reading in a new DataFrame.\n",
+    "passing_reading = school_data_complete_df[school_data_complete_df[\"reading_score\"] >= 70]\n",
+    "\n",
+    "## Calculate: \n",
+    "\n",
+    "### Number of students passing reading\n",
+    "passing_reading_count = passing_reading[\"student_name\"].count() \n",
+    "### Percent that passed reading\n",
+    "passing_reading_percentage = passing_reading_count / float(student_count) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New DataFrame:\n",
+    "\n",
+    "## Get students who passed both math and reading in a new DataFrame.\n",
+    "passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70) \n",
+    "                                               & (school_data_complete_df[\"reading_score\"] >= 70)]\n",
+    "\n",
+    "## Calculate: \n",
+    "\n",
+    "### Number of students who passed both math and reading.\n",
+    "overall_passing_math_reading_count = passing_math_reading[\"student_name\"].count()\n",
+    "### Overall passing percentage.\n",
+    "overall_passing_percentage = overall_passing_math_reading_count / student_count * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>81.9</td>\n",
+       "      <td>74</td>\n",
+       "      <td>85</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools Total Students    Total Budget Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428.00               78.9   \n",
+       "\n",
+       "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
+       "0                  81.9             74                85                64  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# New DataFrame:\n",
+    "\n",
+    "## Adding a list of values with keys to create a new DataFrame for final output.\n",
+    "district_summary_df = pd.DataFrame(\n",
+    "          [{\"Total Schools\": school_count,\n",
+    "          \"Total Students\": student_count,\n",
+    "          \"Total Budget\": total_budget,\n",
+    "          \"Average Math Score\": average_math_score,\n",
+    "          \"Average Reading Score\": average_reading_score,\n",
+    "          \"% Passing Math\": passing_math_percentage,\n",
+    "         \"% Passing Reading\": passing_reading_percentage,\n",
+    "        \"% Overall Passing\": overall_passing_percentage}])\n",
+    "\n",
+    "## Format the columns of the DataFrame:\n",
+    "\n",
+    "district_summary_df[\"Total Students\"] = district_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
+    "\n",
+    "district_summary_df[\"Total Budget\"] = district_summary_df[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "district_summary_df[\"Average Math Score\"] = district_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "district_summary_df[\"Average Reading Score\"] = district_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "district_summary_df[\"% Passing Math\"] = district_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "district_summary_df[\"% Passing Reading\"] = district_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "district_summary_df[\"% Overall Passing\"] = district_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "## Reorder columns.\n",
+    "new_column_order = [\"Total Schools\", \"Total Students\", \"Total Budget\",\n",
+    "                    \"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \n",
+    "                    \"% Passing Reading\", \"% Overall Passing\"]\n",
+    "\n",
+    "## Assign district summary df the new column order.\n",
+    "district_summary_df = district_summary_df[new_column_order]\n",
+    "\n",
+    "## Print DataFrame.\n",
+    "district_summary_df"
+   ]
   },
   {
    "cell_type": "code",
