--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false
    },
@@ -228,7 +228,7 @@
        "39169           95.0        75.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,92 +249,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# New DataFrame:\n",
-    "\n",
-    "## Combine the data into a single dataset.\n",
+    "# Combine the data into a single dataset.\n",
     "school_data_complete_df = pd.merge(student_data_df, school_data_df, on=[\"school_name\", \"school_name\"]) \n",
     "\n",
-    "## Calculate: \n",
+    "# Calculate: \n",
     "\n",
-    "### Total number of students\n",
+    "## Total number of students\n",
     "student_count = school_data_complete_df[\"Student ID\"].count()\n",
-    "### Total number of schools\n",
+    "## Total number of schools\n",
     "school_count = school_data_df[\"school_name\"].count() \n",
-    "### Total budget\n",
+    "## Total budget\n",
     "total_budget = school_data_df[\"budget\"].sum()\n",
-    "### Average reading score\n",
+    "## Average reading score\n",
     "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
-    "### Average math score\n",
+    "## Average math score\n",
     "average_math_score = school_data_complete_df[\"math_score\"].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# New DataFrame:\n",
-    "\n",
-    "## Get all the students who are passing math in a new DataFrame.\n",
+    "# Get all the students who are passing math in a new dataset.\n",
     "passing_math = school_data_complete_df[school_data_complete_df[\"math_score\"] >= 70]\n",
     "\n",
-    "## Calculate: \n",
+    "# Calculate: \n",
     "\n",
-    "### Number of students passing math\n",
+    "## Number of students passing math\n",
     "passing_math_count = passing_math[\"student_name\"].count()\n",
-    "### Percent that passed math\n",
+    "## Percent that passed math\n",
     "passing_math_percentage = passing_math_count / float(student_count) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# New DataFrame:\n",
-    "\n",
-    "## Get all the students that are passing reading in a new DataFrame.\n",
+    "# Get all the students that are passing reading in a new dataset.\n",
     "passing_reading = school_data_complete_df[school_data_complete_df[\"reading_score\"] >= 70]\n",
     "\n",
-    "## Calculate: \n",
+    "# Calculate: \n",
     "\n",
-    "### Number of students passing reading\n",
+    "## Number of students passing reading\n",
     "passing_reading_count = passing_reading[\"student_name\"].count() \n",
-    "### Percent that passed reading\n",
+    "## Percent that passed reading\n",
     "passing_reading_percentage = passing_reading_count / float(student_count) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# New DataFrame:\n",
-    "\n",
-    "## Get students who passed both math and reading in a new DataFrame.\n",
+    "# Get students who passed both math and reading in a new dataset.\n",
     "passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70) \n",
     "                                               & (school_data_complete_df[\"reading_score\"] >= 70)]\n",
     "\n",
-    "## Calculate: \n",
+    "# Calculate: \n",
     "\n",
-    "### Number of students who passed both math and reading.\n",
+    "## Number of students who passed both math and reading.\n",
     "overall_passing_math_reading_count = passing_math_reading[\"student_name\"].count()\n",
-    "### Overall passing percentage.\n",
+    "## Overall passing percentage.\n",
     "overall_passing_percentage = overall_passing_math_reading_count / student_count * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -392,15 +384,13 @@
        "0                  81.9             74                85                64  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# New DataFrame:\n",
-    "\n",
-    "## Adding a list of values with keys to create a new DataFrame for final output.\n",
+    "# Add a list of values with keys to create a new DataFrame for final output.\n",
     "district_summary_df = pd.DataFrame(\n",
     "          [{\"Total Schools\": school_count,\n",
     "          \"Total Students\": student_count,\n",
@@ -411,7 +401,7 @@
     "         \"% Passing Reading\": passing_reading_percentage,\n",
     "        \"% Overall Passing\": overall_passing_percentage}])\n",
     "\n",
-    "## Format the columns of the DataFrame:\n",
+    "# Format the columns of the DataFrame:\n",
     "\n",
     "district_summary_df[\"Total Students\"] = district_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
     "\n",
@@ -427,16 +417,278 @@
     "\n",
     "district_summary_df[\"% Overall Passing\"] = district_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
     "\n",
-    "## Reorder columns.\n",
+    "# Reorder columns.\n",
     "new_column_order = [\"Total Schools\", \"Total Students\", \"Total Budget\",\n",
     "                    \"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \n",
     "                    \"% Passing Reading\", \"% Overall Passing\"]\n",
     "\n",
-    "## Assign district summary df the new column order.\n",
+    "# Assign district summary df the new column order.\n",
     "district_summary_df = district_summary_df[new_column_order]\n",
     "\n",
-    "## Print DataFrame.\n",
+    "# Print DataFrame.\n",
     "district_summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The school summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Get data per school: \n",
+    "\n",
+    "## School type\n",
+    "per_school_types = school_data_df.set_index([\"school_name\"])[\"type\"]\n",
+    "\n",
+    "## Total student count\n",
+    "per_school_counts = school_data_df.set_index([\"school_name\"])[\"size\"]\n",
+    "\n",
+    "## Total school budget\n",
+    "per_school_budget = school_data_df.set_index([\"school_name\"])[\"budget\"]\n",
+    "\n",
+    "## Per capita spending\n",
+    "per_school_capita = per_school_budget / per_school_counts\n",
+    "\n",
+    "## Math scores\n",
+    "per_school_math = school_data_complete_df.groupby([\"school_name\"]).mean()[\"math_score\"]\n",
+    "\n",
+    "## Reading scores\n",
+    "per_school_reading = school_data_complete_df.groupby([\"school_name\"]).mean()[\"reading_score\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get data per school:\n",
+    "\n",
+    "## Calculate percentage of students passing math per school: \n",
+    "\n",
+    "### Filter by passing math scores\n",
+    "per_school_passing_math = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70)]\n",
+    "\n",
+    "### Calculate number of students that passed math per school\n",
+    "per_school_passing_math = per_school_passing_math.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "\n",
+    "### Calculate percentage\n",
+    "per_school_passing_math = per_school_passing_math / per_school_counts * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get data per school: \n",
+    "\n",
+    "## Calculate percentage of students passing reading per school: \n",
+    "\n",
+    "### Filter by passing reading scores.\n",
+    "per_school_passing_reading = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >= 70)]\n",
+    "\n",
+    "### Calculate number of students that passed reading per school.\n",
+    "per_school_passing_reading = per_school_passing_reading.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "\n",
+    "### Calculate percentage.\n",
+    "per_school_passing_reading = per_school_passing_reading / per_school_counts * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get data per school: \n",
+    "\n",
+    "## Calculate percentage of students passing both math and reading per school: \n",
+    "\n",
+    "### Filter by the students who passed both math and reading.\n",
+    "per_passing_math_reading = school_data_complete_df[(school_data_complete_df[\"math_score\"] >= 70) \n",
+    "                                                   & (school_data_complete_df[\"reading_score\"] >= 70)]\n",
+    "### Calculate the number of students who passed both math and reading.\n",
+    "per_passing_math_reading = per_passing_math_reading.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "\n",
+    "### Calculate percentage. \n",
+    "per_overall_passing_percentage = per_passing_math_reading / per_school_counts * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4976</td>\n",
+       "      <td>$3,124,928.00</td>\n",
+       "      <td>$628.00</td>\n",
+       "      <td>77.048432</td>\n",
+       "      <td>81.033963</td>\n",
+       "      <td>66.680064</td>\n",
+       "      <td>81.933280</td>\n",
+       "      <td>54.642283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2739</td>\n",
+       "      <td>$1,763,916.00</td>\n",
+       "      <td>$644.00</td>\n",
+       "      <td>77.102592</td>\n",
+       "      <td>80.746258</td>\n",
+       "      <td>68.309602</td>\n",
+       "      <td>79.299014</td>\n",
+       "      <td>54.289887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     School Type  Total Students Total School Budget  \\\n",
+       "Bailey High School      District            4976       $3,124,928.00   \n",
+       "Cabrera High School      Charter            1858       $1,081,356.00   \n",
+       "Figueroa High School    District            2949       $1,884,411.00   \n",
+       "Ford High School        District            2739       $1,763,916.00   \n",
+       "Griffin High School      Charter            1468         $917,500.00   \n",
+       "\n",
+       "                     Per Student Budget  Average Math Score  \\\n",
+       "Bailey High School              $628.00           77.048432   \n",
+       "Cabrera High School             $582.00           83.061895   \n",
+       "Figueroa High School            $639.00           76.711767   \n",
+       "Ford High School                $644.00           77.102592   \n",
+       "Griffin High School             $625.00           83.351499   \n",
+       "\n",
+       "                      Average Reading Score  % Passing Math  \\\n",
+       "Bailey High School                81.033963       66.680064   \n",
+       "Cabrera High School               83.975780       94.133477   \n",
+       "Figueroa High School              81.158020       65.988471   \n",
+       "Ford High School                  80.746258       68.309602   \n",
+       "Griffin High School               83.816757       93.392371   \n",
+       "\n",
+       "                      % Passing Reading  % Overall Passing  \n",
+       "Bailey High School            81.933280          54.642283  \n",
+       "Cabrera High School           97.039828          91.334769  \n",
+       "Figueroa High School          80.739234          53.204476  \n",
+       "Ford High School              79.299014          54.289887  \n",
+       "Griffin High School           97.138965          90.599455  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add a list of values with keys to create a new DataFrame.\n",
+    "\n",
+    "per_school_summary_df = pd.DataFrame({\n",
+    "             \"School Type\": per_school_types,\n",
+    "             \"Total Students\": per_school_counts,\n",
+    "             \"Total School Budget\": per_school_budget,\n",
+    "             \"Per Student Budget\": per_school_capita,\n",
+    "             \"Average Math Score\": per_school_math,\n",
+    "           \"Average Reading Score\": per_school_reading,\n",
+    "           \"% Passing Math\": per_school_passing_math,\n",
+    "           \"% Passing Reading\": per_school_passing_reading,\n",
+    "           \"% Overall Passing\": per_overall_passing_percentage})\n",
+    "\n",
+    "# Format the columns of the DataFrame: \n",
+    "\n",
+    "per_school_summary_df[\"Total School Budget\"] = per_school_summary_df[\"Total School Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "per_school_summary_df[\"Per Student Budget\"] = per_school_summary_df[\"Per Student Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "# Reorder the columns.\n",
+    "new_column_order = [\"School Type\", \"Total Students\", \"Total School Budget\", \"Per Student Budget\", \"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
+    "\n",
+    "# Assign district summary df the new column order.\n",
+    "per_school_summary_df = per_school_summary_df[new_column_order]\n",
+    "\n",
+    "per_school_summary_df.head()"
    ]
   },
   {
